[tool.poetry]
name = "Flask-Viewsets"
version = "0.1.3"
description = "Adds Django REST Framework inspired viewsets to Flask."
authors = ["Quentin Boudinel <quentin.boudinel@atelier-26.net>"]
readme = "README.md"
repository = "https://github.com/quentinboudinel/Flask-Viewsets"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
